
=======================================================
            WanT code:  Log of Changes 
=======================================================


27 Jul 2005      Transport code simplified: greena.f90, greenb.f90 merged in green.f90;
                 the same for transporta.f90, transportb.f90 merged into 
                 transport.f90. Tests updated. (AF) 

26 Jul 2005      Bug fixing in hamiltonian_module: nwsx too small in some cases.
                 Output fmt changed in hamiltonian_calc.f90, some minorities in
                 wigner_seitz.f90 changed. (AF)

12 Jul 2005      Tests updated by the elimination of bulk.x runs (but also other
                 small changes occurred). Bshell routine updated and a bug have been 
                 fixed there. ndnntot variable (kpoints module) deleted. (AF)

09 Jul 2005      Transport package changed: bulk code eliminated and inserted in
                 the conductor code. readH.f90 routine updated (deals with both
                 conductor and bulk case). Conductor input modified. Routine 
                 read_matrix.f90 added. All routines related to the bulk code 
                 expunged from CVS repository. (AF)                

08 Jul 2005      Bug in subspace_init.f90 avoiding the use of frozen states fixed. (AF)

07 Jul 2005      portability bug in the gcube2plt.c routine fixed on IBM; output
                 fmt choice added in plot, in order to deal with non-orthorombic
                 lattices. gcube2plt output changed and rightly flushed. (AF) 

05 Jul 2005      Plot and bands utilities updated with a small big fix: spin_component
                 flag in the input namelist is required. This should be only a 
                 temporary fix, better implementation ASAP. Fixed a bug in plot.x where
                 setting defaults for z FFT mesh. Test7 updated with plot calculation. (AF)

21 Jun 2005      Plot utility finally updated and tested. USPP not implemented but